--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "focus-trap-react": "^11.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -21,6 +22,7 @@
     "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.1.1",
     "sass": "^1.69.0",
-    "vite": "^7.1.1"
+    "vite": "^7.1.1",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
